--- a/deployment_api/playbooks/wireguard_client.yml
+++ b/deployment_api/playbooks/wireguard_client.yml
@@ -7,6 +7,8 @@
   vars:
     temp_dir: "/tmp/wireguard_{{ client_id }}"
     api_url: "http://127.0.0.1:5000"
+  vars_files:
+    - vars.yml
 
   tasks:
     - name: create_temporary_directory
@@ -83,7 +85,7 @@
           private_key: "{{ client_private_key }}"
           public_key: "{{ client_public_key }}"
           server_public_key: "{{ server_public_key }}"
-          public_address: "{{ proxmox_ip }}"
+          public_address: "{{ public_ip }}"
         status_code: 200
       register: api_result
       failed_when: api_result.status != 200 and api_result.status != 201
