fix(ansible) gpg fix

--- a/ansible/tasks/core_software/install_docker.yml
+++ b/ansible/tasks/core_software/install_docker.yml
@@ -4,10 +4,17 @@
     apt_packages:
       - gnupg
       
-- name: add_gpg
-  apt_key:
+- name: download_gpg
+  ansible.builtin.get_url:
     url: https://download.docker.com/linux/ubuntu/gpg
+    dest: /etc/apt/keyrings/docker.asc
+    mode: '0644'
+
+- name: add_apt_repository
+  ansible.builtin.apt_repository:
+    repo: "deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
     state: present
+
 
 - name: add_repo
   apt_repository:
