--- a/ansible/tasks/core_software/install_docker.yml
+++ b/ansible/tasks/core_software/install_docker.yml
@@ -19,7 +19,7 @@
 
 - name: add_repo
   apt_repository:
-    repo: "deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+    repo: "deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu focal stable"
     state: present
     filename: docker
 
