--- a/ansible/tasks/core_software/deploy_web_containers.yml
+++ b/ansible/tasks/core_software/deploy_web_containers.yml
@@ -5,6 +5,13 @@
     remote_src: no
     mode: '0644'
 
+- name: haproxy_config_fix
+  shell: echo "" >> /opt/2bgp-ad/config/haproxy.cfg
+  args:
+    executable: /bin/bash
+  register: haproxy_config_fix
+  until: haproxy_config_fix is succeeded
+
 - name: copy_backend_files
   copy:
     src: ../backend/
