--- a/ansible/tasks/proxmox/deploy_container.yml
+++ b/ansible/tasks/proxmox/deploy_container.yml
@@ -37,7 +37,7 @@
     --memory "{{ container_memory }}" 
     --storage "{{ core_storage }}"
     --rootfs {{ core_storage }}:{{ container_size }}
-    --net0 name=eth0,bridge="{{ sdn_corenet_name }}",ip="{{ container_ip }}/24,gw={{ sdn_corenet_gateway }}",firewall=1
+    --net0 name=eth0,bridge="{{ sdn_corenet_name }}",ip="{{ container_ip }}/24,gw={{ sdn_corenet_gateway }}",firewall=1{% if container_mac is defined and container_mac|length > 0 %},hwaddr="{{ container_mac }}"{% endif %}
     {% if enable_public is defined %}
     --net1 name=eth1,bridge="{{ public_ct_adapter }}",ip="{{ public_ct_ip }}{{ public_ct_subnet }}"
     {% endif %}
