--- a/ansible/tasks/windows/prepare_template.yml
+++ b/ansible/tasks/windows/prepare_template.yml
@@ -1,71 +1,49 @@
-- name: check_if_template_exists
+- name: Check if templates exist
   ansible.builtin.command:
     cmd: qm list
   register: qm_list_output
-  changed_when: false
 
-- name: set_facts
+- name: Set facts for templates server
   ansible.builtin.set_fact:
-    template_exists_1: "{{ '{{ template_win_1 }}' in qm_list_output.stdout }}"
-    template_exists_2: "{{ '{{ template_win_2 }}' in qm_list_output.stdout }}"
-    template_exists_3: "{{ '{{ template_win_3 }}' in qm_list_output.stdout }}"
-  when: role_type=="server"
+    template_exists_1: "{{ template_win_1 in qm_list_output.stdout }}"
+    template_exists_2: "{{ template_win_2 in qm_list_output.stdout }}"
+    template_exists_3: "{{ template_win_3 in qm_list_output.stdout }}"
+  when: role_type == "server"
 
-- name: set_facts
+- name: Set facts for templates client
   ansible.builtin.set_fact:
-    template_exists_1: "{{ '{{ template_win_4 }}' in qm_list_output.stdout }}"
-    template_exists_2: "{{ '{{ template_win_5 }}' in qm_list_output.stdout }}"
-    template_exists_3: "{{ '{{ template_win_6 }}' in qm_list_output.stdout }}"
-  when: role_type=="client"
+    template_exists_1: "{{ template_win_4 in qm_list_output.stdout }}"
+    template_exists_2: "{{ template_win_5 in qm_list_output.stdout }}"
+    template_exists_3: "{{ template_win_6 in qm_list_output.stdout }}"
+  when: role_type == "client"
 
-- name: check_windows_iso_exists
+- name: Check if Windows ISO exists
   stat:
-    path: "/var/lib/vz/template/iso/{{ iso_winserv2019_name }}"
+    path: "/var/lib/vz/template/iso/{{ iso_winserv2019_name if role_type == 'server' else iso_winclient_name }}"
   register: windows_iso_stat
-  when: role_type=="server"
 
-- name: check_windows_iso_exists
-  stat:
-    path: "/var/lib/vz/template/iso/{{ iso_winclient_name }}"
-  register: windows_iso_stat
-  when: role_type=="client"
-
-- name: check_virtio_iso_exists
+- name: Check if VirtIO ISO exists
   stat:
     path: "/var/lib/vz/template/iso/{{ iso_virtio_drivers_name }}"
   register: virtio_iso_stat
 
-- name: install_aria2
+- name: Install aria2
   apt:
     name: aria2
     state: present
   become: yes
 
-- name: download_winsrv2019_iso
+- name: Download Windows ISO
   command: >
     aria2c -x 16 -s 16 -k 1M 
     -d "/var/lib/vz/template/iso/" 
-    -o "{{ iso_winserv2019_name }}"
-    "{{ iso_winserv2019 }}"
+    -o "{{ iso_winserv2019_name if role_type == 'server' else iso_winclient_name }}"
+    "{{ iso_winserv2019 if role_type == 'server' else iso_winclient }}"
   args:
-    creates: "/var/lib/vz/template/iso/{{ iso_winserv2019_name }}"
-  when:
-    - role_type == "server"
-    - not windows_iso_stat.stat.exists | default(true)
+    creates: "/var/lib/vz/template/iso/{{ iso_winserv2019_name if role_type == 'server' else iso_winclient_name }}"
+  when: not windows_iso_stat.stat.exists
 
-- name: download_winclient_iso
-  command: >
-    aria2c -x 16 -s 16 -k 1M 
-    -d "/var/lib/vz/template/iso/" 
-    -o "{{ iso_winclient_name }}"
-    "{{ iso_winclient }}"
-  args:
-    creates: "/var/lib/vz/template/iso/{{ iso_winclient_name }}"
-  when:
-    - role_type == "client"
-    - not windows_iso_stat.stat.exists | default(true)
-
-- name: download_virtio_drivers_iso
+- name: Download VirtIO drivers ISO
   command: >
     aria2c -x 16 -s 16 -k 1M 
     -d "/var/lib/vz/template/iso/" 
@@ -75,57 +53,28 @@
     creates: "/var/lib/vz/template/iso/{{ iso_virtio_drivers_name }}"
   when: not virtio_iso_stat.stat.exists
 
-- name: check_winiso_mount
-  command: mountpoint -q /mnt/winiso
-  register: winiso_mount_check
-  ignore_errors: yes
-  changed_when: false
-
-- name: check_virtio_mount
-  command: mountpoint -q /mnt/virtio
-  register: virtio_mount_check
-  ignore_errors: yes
-  changed_when: false
-
-- name: unmount_winiso
-  command: umount /mnt/winiso
-  when: winiso_mount_check.rc == 0
-  become: yes
-  ignore_errors: yes
-
-- name: unmount_virtio
-  command: umount /mnt/virtio
-  when: virtio_mount_check.rc == 0
-  become: yes
-  ignore_errors: yes
-
-- name: remove_winiso_mount
+- name: Ensure mount directories are absent
   file:
-    path: /mnt/winiso
+    path: "{{ item }}"
     state: absent
+  with_items:
+    - /mnt/winiso
+    - /mnt/virtio
   become: yes
   ignore_errors: yes
 
-- name: remove_virtio_mount
-  file:
-    path: /mnt/virtio
-    state: absent
-  become: yes
-  ignore_errors: yes
-
-- name: create_mount_directories
+- name: Create mount directories
   file:
     path: "{{ item }}"
     state: directory
     mode: '0755'
-  loop:
+  with_items:
     - /mnt/winiso
     - /mnt/virtio
     - /mnt/provision
   become: yes
-  ignore_errors: yes
 
-- name: install_lxml
+- name: Install dependencies
   apt:
     name:
       - python3-lxml
@@ -134,14 +83,14 @@
     state: present
   become: yes
 
-- name: download_qemu_ga
+- name: Download QEMU Guest Agent
   copy:
     src: "{{ playbook_dir }}/assets/windows/qemu-ga.msi"
     dest: "/mnt/provision/qemu-ga.msi"
     owner: root
     group: root
 
-- name: copy all powershell scripts 
+- name: Copy PowerShell scripts
   copy:
     src: "{{ item }}"
     dest: "/mnt/provision/{{ item | basename }}"
@@ -150,52 +99,61 @@
   with_fileglob:
     - "{{ playbook_dir }}/assets/windows/*.ps1"
 
-- name: mount_virtio_drivers_iso
-  command: mount -o loop,ro /var/lib/vz/template/iso/{{ iso_virtio_drivers_name }} /mnt/virtio
-  become: yes
+- name: Mount ISO files
+  block:
+    - name: Mount VirtIO drivers ISO
+      command: mount -o loop,ro /var/lib/vz/template/iso/{{ iso_virtio_drivers_name }} /mnt/virtio
+      become: yes
 
-- name: mount_windows_server_iso
-  command: mount -o loop,ro /var/lib/vz/template/iso/{{ iso_winserv2019_name }} /mnt/winiso
-  become: yes
+    - name: Mount Windows ISO
+      command: mount -o loop,ro /var/lib/vz/template/iso/{{ iso_winserv2019_name if role_type == 'server' else iso_winclient_name }} /mnt/winiso
+      become: yes
 
-- name: copy_winiso
-  command: rsync -av /mnt/winiso/ /mnt/provision
-  become: yes
+  when:
+    - windows_iso_stat.stat.exists
+    - virtio_iso_stat.stat.exists
 
-- name: copy_virtio
-  command: rsync -av /mnt/virtio/ /mnt/provision/
-  become: yes
+- name: Copy ISO contents to provision directory
+  block:
+    - name: Copy Windows contents
+      command: rsync -av /mnt/winiso/ /mnt/provision
+      become: yes
 
-- name: unmount_winiso
-  mount:
-    path: /mnt/winiso
-    state: unmounted
-  become: yes
+    - name: Copy VirtIO contents
+      command: rsync -av /mnt/virtio/ /mnt/provision/
+      become: yes
 
-- name: unmount_virtio
-  mount:
-    path: /mnt/virtio
-    state: unmounted
-  become: yes
+- name: Unmount ISO files
+  block:
+    - name: Unmount Windows ISO
+      mount:
+        path: /mnt/winiso
+        state: unmounted
+      become: yes
 
-- name: copy_xml
+    - name: Unmount VirtIO ISO
+      mount:
+        path: /mnt/virtio
+        state: unmounted
+      become: yes
+
+- name: Copy Autounattend XML for server
   copy:
     src: "{{ playbook_dir }}/assets/windows/autounattend.xml"
     dest: "/mnt/provision/autounattend.xml"
     owner: root
     group: root
-  when: role_type=="server"
+  when: role_type == "server"
 
-- name: copy_xml
+- name: Copy Autounattend XML for client
   copy:
     src: "{{ playbook_dir }}/assets/windows/clientautounattend.xml"
-    dest: "/mnt/provision/autounattend.xml"
+    dest: "/mnt/provision/clientautounattend.xml"
     owner: root
     group: root
-  when: role_type=="client"
+  when: role_type == "client"
 
-
-- name: create_iso
+- name: Create Server ISO
   command: >
     genisoimage -o /var/lib/vz/template/iso/Windows_Server_Auto.iso
     -b boot/etfsboot.com -no-emul-boot -boot-load-size 8 -iso-level 3
@@ -204,3 +162,15 @@
     -allow-limited-size /mnt/provision/
   become: yes
   register: iso_created
+  when: role_type == "server"
+
+- name: Create Client ISO
+  command: >
+    genisoimage -o /var/lib/vz/template/iso/Windows_Client_Auto.iso
+    -b boot/etfsboot.com -no-emul-boot -boot-load-size 8 -iso-level 3
+    -relaxed-filenames -allow-lowercase -allow-multidot -udf -J -joliet-long
+    -eltorito-alt-boot -e boot/boot.sdi -no-emul-boot -V "WinClient_Auto"
+    -allow-limited-size /mnt/provision/
+  become: yes
+  register: iso_created
+  when: role_type == "client"
