--- a/ansible/playbook_test.yml
+++ b/ansible/playbook_test.yml
@@ -8,22 +8,14 @@
   ### SETUP ANSIBLE ###
 
   ### PREPARING WINDOWS TEMPLATES ###
-    - name: prepare_windows_template
-      import_tasks: tasks/windows/prepare_template.yml
-      vars:
-        role_type: "server"
+    # - name: prepare_windows_template
+    #   import_tasks: tasks/windows/prepare_server.yml
 
-    - name: build_windows_template
-      import_tasks: tasks/windows/build_template.yml
-      vars:
-        role_type: "server"
+    # - name: build_windows_template
+    #   import_tasks: tasks/windows/build_server.yml
 
     - name: prepare_windows_client_template
-      import_tasks: tasks/windows/prepare_template.yml
-      vars:
-        role_type: "client"
+      import_tasks: tasks/windows/prepare_client.yml
 
     - name: build_windows_client_template
-      import_tasks: tasks/windows/build_template.yml
-      vars:
-        role_type: "client"
+      import_tasks: tasks/windows/build_client.yml
